Implementing a simple plugin architecture